# pushthebutton

./: .gitignore  README.md  README_VALA.md  build.sh  install.sh  install_vala.sh  meson.build  meson_options.txt
data/: fedora-backup-tool.desktop
data/applications/: fedora-backup-tool.desktop
data/systemd/: fedora-backup.service  fedora-backup.timer
scripts/: post-install.sh
src/: backup-manager.vala  backup-system.vala  backup-window.vala  cloud-integration.vala  cloud-manager.vala  database-manager.vala  datetime-helper.vala  gui.vala  history-window.vala  logger.vala  main.vala  restore-manager.vala  restore-window.vala  scheduler.vala  settings-window.vala
